# cdk-rust-lambda-example-2024

./: .lintstagedrc.yaml  biome.json  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
lib/: cdk-app-stack.ts
rs-lambda/: Cargo.toml
rs-lambda/greet/: Cargo.toml
rs-lambda/greet/src/: lib.rs  main.rs
rs-lambda/hello-world/: Cargo.toml
rs-lambda/hello-world/src/: main.rs
test/__snapshots__/: snapshot.test.ts.snap
