[package]
name = "greet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = { version = "0.13.0", default-features = false, features = ["apigw"] }
chrono = "0.4.31"

lambda_runtime = { workspace = true }
serde = "1.0"
serde_json = "1.0.111"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
